<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_categories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.udc.ipm.p2.CategoriesFragment">

    <ListView
        android:id="@+id/mainlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

</FrameLayout>
